opam-version: "2.0"
maintainer: "dave@recoil.org"
authors: ["Dave Scott" "Thomas Gazagnaire" "David Allsopp"]
tags: ["org:xapi-project" "org:mirage"]
homepage: "https://github.com/mirage/ocaml-tar"
doc: "https://mirage.github.io/ocaml-tar/"
bug-reports: "https://github.com/mirage/ocaml-tar/issues"
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {build & >= "1.0"}
  "tar"
  "cstruct" {>= "1.9.0"}
  "re" {>="1.7.2"}
  "mirage-block-unix" {with-test & >= "2.5.0"}
  "mirage-kv" {>= "2.0.0"}
  "mirage-kv-lwt" {>= "2.0.0"}
  "lwt"
  "io-page"
  "ptime"
  "mirage-block-unix" {with-test}
  "io-page-unix" {with-test}
  "ounit" {with-test}
  "tar-unix" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/ocaml-tar.git"
synopsis: "Read and write tar format files via MirageOS interfaces"
description: """
tar is a simple library to read and write tar files with an emphasis on
streaming.  This library is functorised over external OS dependencies
to facilitate embedding within MirageOS.
"""
